--- a/java-g06/src/gui/Start/ApplicatiePanel.fxml
+++ b/java-g06/src/gui/Start/ApplicatiePanel.fxml
@@ -18,7 +18,7 @@
         </Menu>
         <Menu mnemonicParsing="false" text="Gebruiker">
           <items>
-            <MenuItem fx:id="gebMenuBeheer" mnemonicParsing="false" text="Beheren" />
+            <MenuItem fx:id="gebMenuBeheer" mnemonicParsing="false" text="Gebruiker beheren" />
           </items>
         </Menu>
       </menus>
