--- a/java-g06/src/gui/Gebruiker/FormLid.fxml
+++ b/java-g06/src/gui/Gebruiker/FormLid.fxml
@@ -9,13 +9,20 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1590.0" type="ScrollPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1590" type="ScrollPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <content>
-      <AnchorPane prefHeight="1080.0" prefWidth="1590.0">
+      <AnchorPane prefHeight="1080.0" prefWidth="1580">
          <children>
+            <ImageView fitHeight="1080.0" fitWidth="1580" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@/resources/background.jpg" />
+               </image>
+            </ImageView>
             <MenuButton id="btnNieuw" fx:id="btnNieuw" layoutX="19.0" layoutY="558.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="253.0" text="Nieuwe gebruiker">
                <styleClass>
                   <String fx:value="primary" />
