--- a/java-g06/src/gui/Gebruiker/FormProefgebruiker.fxml
+++ b/java-g06/src/gui/Gebruiker/FormProefgebruiker.fxml
@@ -20,7 +20,7 @@
          <children>
               <ImageView fitHeight="1080.0" fitWidth="1590.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@/resources/background.jpg" />
+                  <Image url="@/resources/BackgroundImg.jpg" />
                </image>
             </ImageView>
             <MenuButton id="btnNieuw" fx:id="btnNieuw" layoutX="20.0" layoutY="267.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="253.0" text="Nieuwe gebruiker">
