--- a/java-g06/src/gui/Overzichten/Aanwezigheden/AanwezighedenDetailPanel.fxml
+++ b/java-g06/src/gui/Overzichten/Aanwezigheden/AanwezighedenDetailPanel.fxml
@@ -16,10 +16,10 @@
          <children>
             <ImageView fitHeight="1080.0" fitWidth="1590.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@/resources/BackgroundImg.jpg"  />
+                  <Image url="@../proj2.0/GitHubProjJAva/java-g06/build/classes/resources/BackgroundImg.jpg" />
                </image>
             </ImageView>
-            <Label layoutX="21.0" layoutY="22.0" prefHeight="35.0" prefWidth="558.0" text="Aanwezigheden lesmoment">
+            <Label fx:id="titelLabel" layoutX="21.0" layoutY="22.0" prefHeight="35.0" prefWidth="558.0" text="Aanwezigheden lesmoment">
                <font>
                   <Font size="24.0" />
                </font>
@@ -65,7 +65,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="detailTelefoonValue" layoutX="920.0" layoutY="161.0" prefHeight="20.0" prefWidth="271.0" text="tempPro">
+            <Label fx:id="detailGradatieValue" layoutX="920.0" layoutY="161.0" prefHeight="20.0" prefWidth="271.0" text="tempPro">
                <font>
                   <Font size="14.0" />
                </font>
