overzichten implementatie (aanwezigheden) (activiteiten)

--- a/java-g06/src/gui/Overzichten/Aanwezigheden/AanwezighedenDetailPanel.fxml
+++ b/java-g06/src/gui/Overzichten/Aanwezigheden/AanwezighedenDetailPanel.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -10,7 +15,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1590.0" type="ScrollPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1590.0" type="ScrollPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <content>
       <AnchorPane prefHeight="1080.0" prefWidth="1590.0">
          <children>
@@ -24,17 +29,16 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <TableView layoutX="21.0" layoutY="83.0" prefHeight="900.0" prefWidth="700.0">
+            <TableView fx:id="tableViewAanwezigheden" layoutX="21.0" layoutY="83.0" onMouseClicked="#mouseClickItem" prefHeight="900.0" prefWidth="700.0">
               <columns>
-                <TableColumn fx:id="naamGebruiker" editable="false" prefWidth="200.0" text="Naam" />
-                <TableColumn fx:id="VoornaamGebruiker" editable="false" prefWidth="200.0" text="Voornaam" />
-                  <TableColumn fx:id="AanwezigGebruiker" editable="false" prefWidth="100.0" text="Aanwezig" />
-                  <TableColumn fx:id="Ingeschreven" editable="false" prefWidth="100.0" text="Ingeschreven" />
-                  <TableColumn fx:id="LesformuleGebruiker" editable="false" prefWidth="100.0" text="Lesformule" />
+                <TableColumn fx:id="naamGebruiker" editable="false" prefWidth="230.0" text="Naam" />
+                <TableColumn fx:id="VoornaamGebruiker" editable="false" prefWidth="230.0" text="Voornaam" />
+                  <TableColumn fx:id="AanwezigGebruiker" editable="false" prefWidth="120.0" text="Aanwezig" />
+                  <TableColumn fx:id="Ingeschreven" editable="false" prefWidth="120.0" text="Ingeschreven" />
               </columns>
             </TableView>
             <Separator layoutX="14.0" layoutY="64.0" prefWidth="1562.0" />
-            <Label fx:id="detailGebruikerNaam" layoutX="781.0" layoutY="77.0" prefHeight="27.0" prefWidth="500.0" text="Boris De Torck">
+            <Label fx:id="detailGebruikerNaam" layoutX="781.0" layoutY="77.0" prefHeight="27.0" prefWidth="500.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -45,7 +49,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="detailTelefoonValue" layoutX="920.0" layoutY="121.0" prefHeight="20.0" prefWidth="271.0" text="temp0479076258">
+            <Label fx:id="detailTelefoonValue" layoutX="920.0" layoutY="121.0" prefHeight="20.0" prefWidth="271.0">
                <font>
                   <Font size="14.0" />
                </font>
@@ -55,7 +59,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="detailEmailValue" layoutX="920.0" layoutY="141.0" prefHeight="20.0" prefWidth="271.0" text="temp@temp.com">
+            <Label fx:id="detailEmailValue" layoutX="920.0" layoutY="141.0" prefHeight="20.0" prefWidth="271.0">
                <font>
                   <Font size="14.0" />
                </font>
@@ -65,7 +69,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="detailGradatieValue" layoutX="920.0" layoutY="161.0" prefHeight="20.0" prefWidth="271.0" text="tempPro">
+            <Label fx:id="detailGradatieValue" layoutX="920.0" layoutY="161.0" prefHeight="20.0" prefWidth="271.0">
                <font>
                   <Font size="14.0" />
                </font>
