--- a/java-g06/src/gui/activiteit/formActiviteiten.fxml
+++ b/java-g06/src/gui/activiteit/formActiviteiten.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -9,67 +10,91 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="656.0" prefWidth="914.0" type="ScrollPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="926.0" prefWidth="1327.0" type="ScrollPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <content>
-      <AnchorPane prefHeight="623.0" prefWidth="907.0">
+      <AnchorPane prefHeight="851.0" prefWidth="1205.0">
          <children>
-            <Button id="btnOpslaan" fx:id="btnOpslaan" layoutX="261.0" layoutY="558.0" mnemonicParsing="false" onAction="#slaActiviteitOp" prefHeight="46.0" prefWidth="178.0" text="Opslaan">
+            <VBox layoutX="208.0" layoutY="77.0" spacing="12.0">
+               <children>
+                  <TextField id="txfGebruikersnaam" fx:id="txfTitel" prefWidth="230.0" promptText="Titel" />
+                  <TextField id="txfNaam" fx:id="txfType" prefWidth="230.0" promptText="Type" />
+                  <DatePicker id="dpGeboortedatum" fx:id="dpStartdatum" prefWidth="231.0" promptText="Startdatum" />
+                  <DatePicker id="dpGeboortedatum" fx:id="dpEinddatum" prefWidth="231.0" promptText="Einddatum" />
+               </children>
+            </VBox>
+            <VBox layoutX="237.0" layoutY="234.0" prefHeight="62.0" prefWidth="200.0" spacing="12.0">
+               <children>
+                  <TextField fx:id="txfMaxAantalDeelnemers" prefHeight="25.0" prefWidth="0.0" promptText="Maximum aantal deelnemers" />
+                  <TextField fx:id="txfAantalDeelnemers" editable="false" text="0" />
+               </children>
+            </VBox>
+            <Button id="btnOpslaan" fx:id="btnOpslaan" layoutX="244.0" layoutY="749.0" mnemonicParsing="false" onAction="#slaActiviteitOp" prefHeight="46.0" prefWidth="178.0" text="Opslaan">
                <styleClass>
                   <String fx:value="info" />
                   <String fx:value="lg" />
                </styleClass>
             </Button>
-            <Button id="btnVerwijder" fx:id="btnVerwijder" layoutX="579.0" layoutY="559.0" mnemonicParsing="false" onAction="#verwijderActiviteit" prefHeight="46.0" prefWidth="178.0" text="Verwijder">
+            <Button id="btnVerwijder" fx:id="btnVerwijder" layoutX="579.0" layoutY="748.0" mnemonicParsing="false" onAction="#verwijderActiviteit" prefHeight="46.0" prefWidth="178.0" text="Verwijder">
                <styleClass>
                   <String fx:value="danger" />
                   <String fx:value="lg" />
                </styleClass>
             </Button>
-            <Label layoutX="21.0" layoutY="117.0" text="Type">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
             <Separator layoutX="19.0" layoutY="218.0" prefHeight="14.0" prefWidth="436.0" />
-            <Label layoutX="23.0" layoutY="154.0" text="Startdatum">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Label layoutX="23.0" layoutY="191.0" text="Einddatum">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <TextField id="txfNaam" fx:id="txfType" layoutX="209.0" layoutY="114.0" prefWidth="230.0" promptText="Type" />
-            <Label layoutX="19.0" layoutY="234.0" text="Maximum aantal deelnemers">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Label layoutX="23.0" layoutY="77.0" text="Titel">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <TextField id="txfGebruikersnaam" fx:id="txfTitel" layoutX="209.0" layoutY="77.0" prefWidth="230.0" promptText="Titel" />
+            <VBox layoutX="23.0" layoutY="77.0" spacing="12.0">
+               <children>
+                  <Label text="Titel">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label text="Type">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label text="Startdatum">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label text="Einddatum">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+            <VBox layoutX="19.0" layoutY="234.0" spacing="12.0">
+               <children>
+                  <Label text="Maximum aantal deelnemers">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label text="Aantal deelnemers">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
             <Separator layoutX="456.0" layoutY="64.0" orientation="VERTICAL" prefHeight="473.0" prefWidth="10.0" />
             <Separator layoutX="-2.0" layoutY="63.0" prefHeight="13.0" prefWidth="905.0" />
-            <Label fx:id="lblFout" layoutX="29.0" layoutY="615.0" text="Fout" textFill="#cf0e0e">
+            <Label fx:id="lblFout" layoutX="15.0" layoutY="817.0" text="Fout" textFill="#cf0e0e">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button id="btnNieuw" layoutX="29.0" layoutY="559.0" mnemonicParsing="false" onAction="#nieuweActiviteit" prefHeight="44.0" prefWidth="199.0" text="Nieuwe activiteit">
+            <Button id="btnNieuw" layoutX="22.0" layoutY="750.0" mnemonicParsing="false" onAction="#nieuweActiviteit" prefHeight="44.0" prefWidth="199.0" text="Nieuwe activiteit">
                <styleClass>
                   <String fx:value="primary" />
                   <String fx:value="lg" />
                </styleClass></Button>
-            <DatePicker id="dpGeboortedatum" fx:id="dpEinddatum" layoutX="208.0" layoutY="188.0" prefWidth="231.0" promptText="Einddatum" />
-            <DatePicker id="dpGeboortedatum" fx:id="dpStartdatum" layoutX="208.0" layoutY="151.0" prefWidth="231.0" promptText="Startdatum" />
             <Button id="btnOpslaan" layoutX="483.0" layoutY="79.0" minHeight="37.0" mnemonicParsing="false" onAction="#pasDeelnemersAan" prefHeight="37.0" prefWidth="124.0" text="deelnemers">
                <styleClass>
                   <String fx:value="info" />
@@ -79,12 +104,6 @@
                   <Font size="13.0" />
                </font>
             </Button>
-            <Label layoutX="19.0" layoutY="267.0" text="Aantal deelnemers">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <TextField fx:id="txfAantalDeelnemers" editable="false" layoutX="237.0" layoutY="267.0" text="0" />
             <ListView fx:id="alleGebruikersListView" layoutX="466.0" layoutY="131.0" prefHeight="175.0" prefWidth="403.0" />
             <Button id="btnOpslaan" layoutX="639.0" layoutY="79.0" minHeight="33.0" mnemonicParsing="false" onAction="#pasBegeleidersAan" prefHeight="38.0" prefWidth="134.0" text="begeleiders">
                <styleClass>
@@ -109,7 +128,68 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <TextField fx:id="txfMaxAantalDeelnemers" layoutX="237.0" layoutY="234.0" />
+            <Separator layoutX="19.0" layoutY="305.0" prefHeight="14.0" prefWidth="436.0" />
+            <CheckBox fx:id="contactgegevensToggle" layoutX="17.0" layoutY="321.0" mnemonicParsing="false" onAction="#toggleContactgegevens" text="Contactgegevens locatie" />
+            <AnchorPane fx:id="contactgegevensPanel" layoutX="19.0" layoutY="343.0" prefHeight="301.0" prefWidth="450.0">
+               <children>
+                  <VBox spacing="12.0">
+                     <children>
+                        <Label text="Contactpersoon">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label text="Email">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label text="Telefoonnummer">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label text="Land">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label text="Postcode">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label text="Stad">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label text="Straat">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label text="Huisnummer">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox layoutX="201.0" layoutY="2.0" prefHeight="284.0" prefWidth="220.0" spacing="12.0">
+                     <children>
+                        <TextField fx:id="contactPersoonTextField" prefHeight="25.0" prefWidth="230.0" promptText="Contactpersoon" />
+                        <TextField fx:id="emailTextField" prefHeight="25.0" prefWidth="230.0" promptText="Email" />
+                        <TextField fx:id="telefoonnummerTextField" prefHeight="25.0" prefWidth="230.0" promptText="Telefoonnummer" />
+                        <TextField fx:id="landTextField" prefHeight="25.0" prefWidth="231.0" text="België" />
+                        <TextField fx:id="postcodeTextField" prefHeight="25.0" prefWidth="230.0" promptText="Postcode" />
+                        <TextField fx:id="stadTextField" prefHeight="25.0" prefWidth="230.0" promptText="Stad" />
+                        <TextField fx:id="straatTextField" prefHeight="25.0" prefWidth="230.0" promptText="Straat" />
+                        <TextField fx:id="huisnummerTextField" prefHeight="25.0" prefWidth="230.0" promptText="Huisnummer" />
+                     </children>
+                  </VBox>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </content>
