--- a/java-g06/src/gui/activiteit/formActiviteiten.fxml
+++ b/java-g06/src/gui/activiteit/formActiviteiten.fxml
@@ -6,9 +6,10 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -161,7 +162,7 @@
                            <children>
                               <HBox alignment="CENTER" spacing="40.0">
                                  <children>
-                                    <Button id="btnOpslaan" minHeight="37.0" mnemonicParsing="false" onAction="#pasDeelnemersAan" prefHeight="37.0" prefWidth="124.0" text="deelnemers">
+                                    <Button id="btnOpslaan" fx:id="deelnemersSwitchButton" minHeight="37.0" mnemonicParsing="false" onAction="#pasDeelnemersAan" prefHeight="37.0" prefWidth="124.0" text="deelnemers">
                                        <styleClass>
                                           <String fx:value="info" />
                                           <String fx:value="lg" />
@@ -170,7 +171,7 @@
                                           <Font size="13.0" />
                                        </font>
                                     </Button>
-                                    <Button id="btnOpslaan" minHeight="33.0" mnemonicParsing="false" onAction="#pasBegeleidersAan" prefHeight="38.0" prefWidth="134.0" text="begeleiders">
+                                    <Button id="btnOpslaan" fx:id="begeleidersSwitchButton" minHeight="33.0" mnemonicParsing="false" onAction="#pasBegeleidersAan" prefHeight="38.0" prefWidth="134.0" text="begeleiders">
                                        <styleClass>
                                           <String fx:value="info" />
                                           <String fx:value="lg" />
@@ -181,14 +182,24 @@
                                     </Button>
                                  </children>
                               </HBox>
-                              <ListView fx:id="alleGebruikersListView" prefHeight="175.0" prefWidth="403.0" />
+                              <TableView fx:id="alleGebruikersTable" prefHeight="200.0" prefWidth="200.0">
+                                <columns>
+                                  <TableColumn fx:id="alleGebruikersVoornaamColumn" prefWidth="75.0" text="Voornaam" />
+                                  <TableColumn fx:id="alleGebruikersAchternaamColumn" prefWidth="75.0" text="Achternaam" />
+                                </columns>
+                              </TableView>
                               <HBox alignment="CENTER" spacing="40.0">
                                  <children>
                                     <Button fx:id="addGebruikerButton" mnemonicParsing="false" onAction="#addGebruiker" prefHeight="46.0" prefWidth="52.0" styleClass="lg" text="Add" />
                                     <Button fx:id="removeGebruikerButton" mnemonicParsing="false" onAction="#removeGebruiker" prefHeight="46.0" prefWidth="71.0" styleClass="lg" text="Remove" />
                                  </children>
                               </HBox>
-                              <ListView fx:id="gekozenGebruikersListView" prefHeight="175.0" prefWidth="403.0" />
+                              <TableView fx:id="specifiekeGebruikersTable" prefHeight="200.0" prefWidth="200.0">
+                                <columns>
+                                  <TableColumn fx:id="specifiekeGebruikersVoornaamColumn" prefWidth="75.0" text="Voornaam" />
+                                  <TableColumn fx:id="specifiekeGebruikersAchternaamColumn" prefWidth="75.0" text="Achternaam" />
+                                </columns>
+                              </TableView>
                            </children>
                         </VBox>
                      </children>
