--- a/java-g06/src/gui/activiteit/formActiviteiten.fxml
+++ b/java-g06/src/gui/activiteit/formActiviteiten.fxml
@@ -11,6 +11,8 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -20,6 +22,11 @@
    <content>
       <AnchorPane prefHeight="851.0" prefWidth="1205.0">
          <children>
+            <ImageView fitHeight="1080.0" fitWidth="1580.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../resources/BackgroundImg.jpg" />
+               </image>
+            </ImageView>
             <VBox layoutX="-2.0" layoutY="14.0">
                <children>
                   <Label prefHeight="53.0" prefWidth="813.0" text="Detailoverzicht activiteit">
