--- a/java-g06/src/gui/activiteit/formActiviteiten.fxml
+++ b/java-g06/src/gui/activiteit/formActiviteiten.fxml
@@ -22,7 +22,7 @@
    <content>
       <AnchorPane>
          <children>
-            <ImageView fitHeight="1080.0" fitWidth="1580.0" layoutX="10.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="1080.0" fitWidth="1580.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../resources/BackgroundImg.jpg" />
                </image>
